Добавлен эндпойнт на смену статуса выполнения задачи
