# api/internal/delivery/DTOs/toggleTaskStatusRequest.go
@@ -1,0 +1,5 @@
+package DTOs
+
+type ToggleTaskStatusRequest struct {
+	IsDone bool `json:"isDone" binding:"required"`
+}
